# f1-laptime-forecasting

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml
scripts/: build_dataset.py  extract_laps.py  inspect_parquet.py  smoke_fastf1.py
src/f1laptime/: __init__.py  settings.py
src/f1laptime/data/: contracts.py  dataset_build.py  fastf1_cache.py  fastf1_loader.py  laps_extract.py
src/f1laptime/features/: transforms_basic.py
tests/: test_cache_path.py  test_contracts.py  test_imports.py  test_loader_import.py  test_transforms_basic.py
