[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "f1-laptime-forecasting"
version = "0.0.0"
description = "Lap time forecasting project scaffold using FastF1."
requires-python = ">=3.10"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.pytest.ini_options]
testpaths = ["tests"]
